frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudmart-frontend
  labels:
    app: cloudmart-frontend
spec:
  selector:
    app: cloudmart-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
